Fix issue where long tags overflows post boundary

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -161,6 +161,7 @@ a.hidden-reblog {
   display: flex;
   gap: 5px;
   flex-wrap: wrap;
+  word-break: break-word;
 }
 
 .post-tag {
